Fixed how the sidebar behaves when collapsed.

--- a/web/static/css/input.css
+++ b/web/static/css/input.css
@@ -438,24 +438,20 @@
     transition: width 300ms ease-in-out;
 }
 
-#app-sidebar.collapsed .sidebar-collapse-hide {
-    opacity: 0;
-    visibility: hidden;
+#app-sidebar.collapsed {
     overflow: hidden;
+    cursor: pointer;
 }
 
+#app-sidebar.collapsed .sidebar-expanded-content,
 #app-sidebar.collapsed nav,
 #app-sidebar.collapsed .sidebar-stats,
 #app-sidebar.collapsed .sidebar-collapse-hide {
     display: none;
 }
 
-#app-sidebar.collapsed .sidebar-header-content {
-    display: none;
-}
-
-#app-sidebar.collapsed .sidebar-collapse-toggle {
-    margin: 0 auto;
+#app-sidebar.collapsed .sidebar-collapsed-content {
+    display: flex;
 }
 
 /* File tree sidebar collapse */
